fix(app): fully align wallet transaction details to new design

--- a/projects/aria/theme/theme.css
+++ b/projects/aria/theme/theme.css
@@ -113,6 +113,9 @@
   --select-bg-color: var(--bg-color);
   --select-option-color: #000000;
   --select-option-bg-color: #ffffff;
+
+  /* Transaction item */
+  --transaction-details-copy-bg: linear-gradient(90deg, #c000d6 7.48%, #6734ff 79.51%);
 }
 
 .theme-brand {
